--- a/src/app/pages/offer-page/offer-page.component.html
+++ b/src/app/pages/offer-page/offer-page.component.html
@@ -84,6 +84,10 @@
         <app-share-buttons [isOffer]="true"></app-share-buttons>
       </div>
 
+      <div class="report-on-offer-block">
+        <p>Если описанное автором предложение не соответствует действительности, а также в случае попытки мошенничества со стороны автора, <a (click)="reportOnOffer()" class="link-underline">сообщите</a> об этом администрации сервиса.</p>
+      </div>
+
       <div class="comments-block">
         <h3>Комментарии</h3>
 
