--- a/src/app/pages/offer-page/offer-page.component.scss
+++ b/src/app/pages/offer-page/offer-page.component.scss
@@ -121,6 +121,10 @@ $main-theme-color: #2E7990;
     }
   }
 
+  .report-on-offer-block > p {
+    font-size: 14px;
+  }
+
   button {
     float: right;
   }
