login & sign-up dialogs merged, module files moved to corresponding folders

--- a/src/app/dialogs/login/login.component.scss
+++ b/src/app/dialogs/login/login.component.scss
@@ -3,7 +3,11 @@
   font-weight: bold;
 }
 
-.sign-up-link {
+.full-width-action-buttons {
+  margin-top: 1em;
+}
+
+.sign-up-link, .has-account-link {
   color: #FF0000;
   font-weight: bold;
 }
