--- a/src/app/dialogs/login/login.component.html
+++ b/src/app/dialogs/login/login.component.html
@@ -1,29 +1,70 @@
-<h1>Вход</h1>
+<ng-container *ngIf="userHasAccount">
+  <h1>Вход</h1>
 
-<p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
+  <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
 
-<a class="non-border-link-button google-login" (click)="loginGoogle()">Войти через&nbsp;&nbsp;
-  <img src="/assets/img/socials/google_logo.svg" alt="Google"></a>
+  <a class="non-border-link-button google-login" (click)="loginGoogle()">Войти через&nbsp;&nbsp;
+    <img src="/assets/img/socials/google_logo.svg" alt="Google"></a>
 
-<form [formGroup]="loginFormGroup" (keydown.enter)="$event.preventDefault()">
-  <mat-form-field appearance="legacy">
-    <mat-label>E-mail</mat-label>
-    <input matInput formControlName="login">
-    <mat-hint></mat-hint>
-  </mat-form-field>
+  <form [formGroup]="loginFormGroup" (keydown.enter)="$event.preventDefault()">
+    <mat-form-field appearance="legacy">
+      <mat-label>E-mail</mat-label>
+      <input matInput formControlName="login">
+      <mat-hint></mat-hint>
+    </mat-form-field>
 
-  <mat-form-field appearance="legacy">
-    <mat-label>Пароль</mat-label>
-    <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password">
-    <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Скрыть пароль'"
-            [attr.aria-pressed]="hidePassword">
-      <img src="/assets/img/icons/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
-    </button>
-  </mat-form-field>
+    <mat-form-field appearance="legacy">
+      <mat-label>Пароль</mat-label>
+      <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password">
+      <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Скрыть пароль'"
+              [attr.aria-pressed]="hidePassword">
+        <img src="/assets/img/icons/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
+      </button>
+    </mat-form-field>
 
-  <div mat-dialog-actions class="full-width-action-buttons">
-    <a class="non-border-link-button" (click)="forgotPassword()">Забыл пароль</a>
-    <a class="non-border-link-button sign-up-link" (click)="signUp()">Еще нет профиля?&nbsp;Создать</a>
-    <button class="button-primary" (click)="logIn()">Войти</button>
-  </div>
-</form>
+    <div mat-dialog-actions class="full-width-action-buttons">
+      <a class="non-border-link-button" (click)="forgotPassword()">Забыл пароль</a>
+      <a class="non-border-link-button sign-up-link" (click)="userHasAccount = false">Еще нет профиля?&nbsp;Создать</a>
+      <button class="button-primary" (click)="logIn()">Войти</button>
+    </div>
+  </form>
+</ng-container>
+
+<ng-container *ngIf="!userHasAccount">
+  <h1>Регистрация</h1>
+
+  <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
+
+  <form [formGroup]="signUpFormGroup" (keydown.enter)="$event.preventDefault()">
+    <mat-form-field appearance="legacy">
+      <mat-label>Имя</mat-label>
+      <input matInput formControlName="name">
+    </mat-form-field>
+
+    <mat-form-field appearance="legacy">
+      <mat-label>E-mail</mat-label>
+      <input matInput formControlName="email">
+      <mat-hint>Будет использоваться в качестве логина</mat-hint>
+    </mat-form-field>
+
+    <mat-form-field appearance="legacy">
+      <mat-label>Пароль</mat-label>
+      <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password">
+      <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Скрыть пароль'"
+              [attr.aria-pressed]="hidePassword">
+        <img src="/assets/img/icons/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
+      </button>
+      <mat-hint>Не менее 8 символов</mat-hint>
+    </mat-form-field>
+
+    <mat-checkbox (change)="acceptRules = !acceptRules" [checked]="acceptRules">
+      Ознакомлен и согласен с <a target="_blank" rel="noopener noreferrer" href="/rules">правилами размещения объявлений</a>
+    </mat-checkbox>
+
+    <div class="full-width-action-buttons">
+      <a class="non-border-link-button has-account-link" (click)="userHasAccount = true">Уже есть профиль?&nbsp;Войти</a>
+      <button class="button-primary" (click)="signUp()" [disabled]="!acceptRules">Создать профиль</button>
+    </div>
+  </form>
+</ng-container>
+
