MAJOR & RELEASE: dialogs and image cropper lazy loaded, lazy loading service created

--- a/src/app/dialogs/email-verify-message/email-verify.component.html
+++ b/src/app/dialogs/email-verify-message/email-verify.component.html
@@ -7,5 +7,5 @@
 
 <div class="full-width-action-buttons">
   <button class="button-primary" [disabled]="!resendEnabled" (click)="sendEmailVerificationEmail()">Выслать повторно</button>
-  <button class="button-primary button-white" [mat-dialog-close]>Закрыть</button>
+  <button class="button-primary button-white" (click)="closeDialog()">Закрыть</button>
 </div>
