--- a/src/app/dialogs/offer-form-guard/offer-form-guard.component.html
+++ b/src/app/dialogs/offer-form-guard/offer-form-guard.component.html
@@ -1,6 +1,6 @@
 <h1>Несохраненные изменения</h1>
 <div class="content">
-  Вы уверены, что хотите покинуть страницу? Внесенные данные будут безвозвратно утрачены.
+  Вы уверены, что хотите покинуть страницу? Внесенные данные будут безвозвратно утеряны.
 </div>
 <div class="full-width-action-buttons">
   <button class="button-primary button-white" (click)="leave()">Покинуть</button>
