--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -185,6 +185,7 @@
         font-size: 24px;
         font-weight: bold;
         flex-shrink: 1;
+        cursor: pointer;
       }
 
       .desc {
