--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <button class="button-primary button-primary-large" [routerLink]="'/new-offer'">Создать оффер</button>
+    <button class="button-primary button-primary-large" [routerLink]="'/new-offer'">Разместить оффер</button>
   </section>
 
   <section class="about-platform-block">
