--- a/src/app/template-blocks/footer/footer.component.html
+++ b/src/app/template-blocks/footer/footer.component.html
@@ -19,7 +19,7 @@
     <div class="email_and_offer_button">
       <p (click)="sendEmailYmGoal()"><a href="mailto:info@biz-mate.ru"><img src="/assets/img/icons/email_footer.svg" alt="Почта">info@biz-mate.ru</a></p>
       <p (click)="sendVkGroupYmGoal()"><a href="https://vk.com/bizmate" target="_blank"><img src="/assets/img/socials/vk_logo.svg" alt="Вконтакте">vk.com/bizmate</a></p>
-      <button class="button-primary button-transparent" [routerLink]="['/new-offer']">Создать оффер</button>
+      <button class="button-primary button-transparent" [routerLink]="['/new-offer']">Разместить оффер</button>
     </div>
   </div>
 
