--- a/src/app/pages/rules/rules.component.html
+++ b/src/app/pages/rules/rules.component.html
@@ -2,8 +2,8 @@
 
   <h1>Правила размещения объвлений на сайте BizMate (biz-mate.ru)</h1>
 
-  <p>К размещению допускаются объявления по поиску и предложению инвестиций, поиску партнеров, предложению услуг и
-    продаже активов (если это не является основной коммерческой деятельностью).</p>
+  <p>К размещению допускаются объявления по поиску и предложению инвестиций, поиску партнеров, предложению услуг,
+    продаже и обмену материальных и нематериальных активов.</p>
   <p>Разместить объявление на сайте может только авторизованный и верифицированный пользователь. Метод верификации
     зависит от выбранного пользователем способа регистрации.</p>
   <p>Все объявления публикуются сразу же после их успешного сохранения не сервере сайта. Проверка объявлений модератором
@@ -12,7 +12,8 @@
     публикации. Для контактов отведены отдельные поля анкеты.</p>
   <p>Объявление не должно содержать рекламы своих услуг или продвигать какую-либо свою продукцию.</p>
   <p>В тексте объявления запрещено использовать матерные слова, неоднозначные и вводящие в заблуждение выражения.</p>
-  <p>В объявлении должно содержаться конкретное предложение с четкими и понятными требованиями и условиями, а не абстрактный и слишком обобщенный текст.</p>
+  <p>В объявлении должно содержаться конкретное предложение с четкими и понятными требованиями и условиями, а не
+    абстрактный и слишком обобщенный текст.</p>
   <p>В объявлении не должно быть фраз: "Подробности по почте", "Подробности при встрече" и т.д. Вся информация
     подробно публикуется в содержании объявления.</p>
   <p>Вся указанная информация в объявлении должна быть логически связана. Это касается как и фиксированных платформой
@@ -31,7 +32,10 @@
   <p>Пользователь, подавший объявление, передает все права на использование и распространение информации (в т.ч. на
     обработку персональных данных), содержащейся в объявлении, в том числе и контактной информации, администрации
     сайта.</p>
-  <p>К публикации на сайте допускаются объявления только на русском языке.</p>
+  <p>Пользователь дает право администрации сервиса на хранение, использование, изменение и удаление всех файлов, текстовых данных и
+    мета-данных, сохраняемых в системе сервиса.</p>
+  <p>Все жалобы, полученные администрацией сервиса, относительно размещенных объявлений и информации, указанной в них,
+    могут рассматриваться и решаться администрацией сервиса как в одностороннем, так и в двустороннем порядке.</p>
   <p>Не допускаются объявления, содержащие символьное выделение или написанные только заглавными буквами.</p>
   <p>Не допускаются объявления написанные с грубыми нарушениями правил пунктуации (после запятой и точки ставится
     пробел, а новое предложение начинается с большой буквы).</p>
