MAJOR & RELEASE: global refactoring on auth state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-overlay></app-overlay>
 <app-notification-bar></app-notification-bar>
 <app-header></app-header>
-<router-outlet></router-outlet>
-<div (click)="onNotificationButtonClick()" *ngIf="showNotificationButton()" class="new-offers-notification-button button-primary button-circle">
+<router-outlet *ngIf="(authCredentials$ | async)"></router-outlet>
+<div (click)="onNotificationButtonClick()" *ngIf="showNotificationButton()"
+     class="new-offers-notification-button button-primary button-circle">
   <img src="/assets/img/icons/bell.svg" alt="Уведомления"/>
 </div>
 <app-footer></app-footer>
