MAJOR: firestore read availt to everybody, app initialization back to APP_INITIALIZER, dev project implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-overlay></app-overlay>
 <app-notification-bar></app-notification-bar>
 <app-header></app-header>
-<router-outlet *ngIf="(authCredentials$ | async)"></router-outlet>
+<router-outlet></router-outlet>
 <div (click)="onNotificationButtonClick()" *ngIf="showNotificationButton()"
      class="new-offers-notification-button button-primary button-circle">
   <img src="/assets/img/icons/bell.svg" alt="Уведомления"/>
