hideInitialSpinner now is called in ComponentBrowserAbstractClass & some performance improvements

--- a/src/app/pages/offer-form/offer-form.component.scss
+++ b/src/app/pages/offer-form/offer-form.component.scss
@@ -114,7 +114,7 @@ $main-theme-color: #2E7990;
       height: 45px;
       font-size: 60px;
       line-height: 0;
-      font-family: Raleway-Thin;
+      font-family: Raleway-Light;
     }
   }
 
