--- a/src/styles.scss
+++ b/src/styles.scss
@@ -315,6 +315,7 @@ label.mat-form-field-label > span {
     background-color: #FFFFFF;
     border: 1px solid #35A6CA;
     border-radius: 5px;
+    text-align: center;
     cursor: pointer;
 
     img:nth-of-type(1) {
